tests/ast_interpreter/err_type_neg.expected
<string>:1:1: error: unary negation cannot be applied to Bool
-true
^